@@ -52,7 +52,7 @@ public class GroovyTransformer
             if (paras.length < 1 || paras.length > 2) {
                 throw AddaxException.asAddaxException(
                         TransformerErrorCode.TRANSFORMER_ILLEGAL_PARAMETER,
-                        "dx_groovy paras must be 1 or 2 . now paras is: " + Arrays.asList(paras));
+                        "The dx_groovy parameters must be 1 or 2. The current parameter is: " + Arrays.asList(paras));
             }
             synchronized (this) {
 
@@ -83,7 +83,7 @@ public class GroovyTransformer
         }
 
         try {
-            Object t = groovyClass.newInstance();
+            Object t = groovyClass.getConstructor().newInstance();
             if (!(t instanceof Transformer)) {
                 throw AddaxException.asAddaxException(
                         TransformerErrorCode.TRANSFORMER_GROOVY_INIT_EXCEPTION,
