@@ -25,6 +25,7 @@ import com.wgzhao.addax.core.util.container.CoreConstant;
 import com.wgzhao.addax.core.util.container.JarLoader;
 import com.wgzhao.addax.transformer.ComplexTransformer;
 import com.wgzhao.addax.transformer.Transformer;
+import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -66,7 +67,7 @@ public class TransformerRegistry
                 }
             }
             catch (Exception e) {
-                LOG.error("skip transformer({}) loadTransformer has Exception({})",
+                LOG.error("Skip transformer [{}] LoadTransformer has encountered an exception [{}].",
                         each, e.getMessage(), e);
             }
         }
@@ -80,28 +81,28 @@ public class TransformerRegistry
             transformerConfiguration = loadTransFormerConfig(transformerPath);
         }
         catch (Exception e) {
-            LOG.error("skip transformer({}),load transformer.json error, path = {}, ",
+            LOG.error("Skip transformer[{}],load transformer.json error, path = {}, ",
                     each, transformerPath, e);
             return;
         }
 
         String className = transformerConfiguration.getString("class");
         if (StringUtils.isEmpty(className)) {
-            LOG.error("skip transformer({}),class not config, path = {}, config = {}",
+            LOG.error("Skip transformer[{}],class not config, path = {}, config = {}",
                     each, transformerPath, transformerConfiguration.beautify());
             return;
         }
 
         String funName = transformerConfiguration.getString("name");
         if (!each.equals(funName)) {
-            LOG.warn("transformer({}) name not match transformer.json config name[{}], " +
+            LOG.warn("The transformer[{}] name not match transformer.json config name[{}], " +
                             "will ignore json  name, path = {}, config = {}",
                     each, funName, transformerPath, transformerConfiguration.beautify());
         }
 
         try (JarLoader jarLoader = new JarLoader(new String[] {transformerPath})) {
             Class<?> transformerClass = jarLoader.loadClass(className);
-            Object transformer = transformerClass.newInstance();
+            Object transformer = transformerClass.getConstructor().newInstance();
             if (ComplexTransformer.class.isAssignableFrom(transformer.getClass())) {
                 ((ComplexTransformer) transformer).setTransformerName(each);
                 registryComplexTransformer((ComplexTransformer) transformer, jarLoader, false);
@@ -111,27 +112,22 @@ public class TransformerRegistry
                 registryTransformer((Transformer) transformer, jarLoader, false);
             }
             else {
-                LOG.error("load Transformer class({}) error, path = {}", className, transformerPath);
+                LOG.error("Load Transformer class[{}] error, path = {}", className, transformerPath);
             }
         }
         catch (Exception e) {
             //error, skip function
-            LOG.error("skip transformer({}),load Transformer class error, path = {} ", each, transformerPath, e);
+            LOG.error("Skip transformer({}),load Transformer class error, path = {} ", each, transformerPath, e);
         }
     }
 
     private static Configuration loadTransFormerConfig(String transformerPath)
     {
-        return Configuration.from(new File(transformerPath + File.separator + "transformer.json"));
+        return Configuration.from(new File(FilenameUtils.getPath(transformerPath) + File.separator + "transformer.json"));
     }
 
     public static TransformerInfo getTransformer(String transformerName)
     {
-
-        //if (result == null) {
-        // todo 再尝试从disk读取
-        //}
-
         return registeredTransformer.get(transformerName);
     }
 
